--- a/exercicioshtmlcss/12/estilo/style.css
+++ b/exercicioshtmlcss/12/estilo/style.css
@@ -1,8 +1,19 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: verdana, Geneva, tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3:'Sriracha', cursive;
+
+}
+
+
 * { 
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 
 }
 html, body
@@ -10,6 +21,7 @@ html, body
 {
     min-height: 100%vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 header {
     background-color: black;
@@ -21,6 +33,8 @@ header >h1 {
 
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 4em;
 }
 header >p {
     padding-bottom: 50px;
@@ -43,7 +57,8 @@ section {
     padding-bottom: 10%vh;
     line-height: 2em;
     padding-left: 30px;
-    
+    font-family: var(--fonte3);
+    font-size: 3.5vh;
 }
 
 
@@ -59,7 +74,8 @@ section.normal {
 
  section.imagem >p {
      background-color: rgb(49, 41, 41);
-     width: 400px;
+     display: inline-block;
+     padding: 5px;
      
  }
 
