--- a/exercicioshtmlcss/12/estilo/style.css
+++ b/exercicioshtmlcss/12/estilo/style.css
@@ -53,8 +53,8 @@ header a:hover, footer a:hover
 } 
 
 section {
-    padding-top: 10%vh;
-    padding-bottom: 10%vh;
+  padding-top: 10vh;
+   padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
@@ -70,18 +70,35 @@ section.normal {
  section.imagem {
      background-color: rgba(141, 119, 119, 0.357);
      color: white;
+     box-shadow: 6px 6px 13px 0px;
+     background-size: cover;
+     background-attachment: fixed;
  }
 
  section.imagem >p {
-     background-color: rgb(49, 41, 41);
+     background-color: rgba(44, 40, 40, 0.481);
+     width: 400px;
      display: inline-block;
      padding: 5px;
+     text-shadow: 1px 1px 0px;
      
  }
+section >p {
+    padding-bottom: 2em;
+}
+
+section#img01 {
+background-image: url(../imagens/background001.jpg);
+background-position: right center;
+background-size: cover;
 
 
+}
+section#img02 {
+background-image: url(../imagens/background002.jpg);
+background-size: cover;
 
-
+}
 
 
 
